Edits to Home page. Button style fixes, Displays as  1 row/3 items on Desktop, 3 rows/1 item on Mobile

--- a/src/components/Blue.module.css
+++ b/src/components/Blue.module.css
@@ -53,7 +53,6 @@ li.links a {
 }
 
   .gridContainer > div {
-    background-color: rgb(100, 149, 237);
     text-align: center;
     padding-bottom: 0;
   }
@@ -256,10 +255,10 @@ li.links a {
   }
 
   .bearLogo:hover {
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -o-transform: scale(1.05);
+    transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -o-transform: scale(1.02);
     transition-duration: 200ms;
     -webkit-transition-duration: 200ms;
     -moz-transition-duration: 200ms;
