--- a/src/components/Brown.module.css
+++ b/src/components/Brown.module.css
@@ -50,10 +50,10 @@ li.links a {
   grid-gap: 0;
   height: 100%;
   width: auto;
+  background-color: sienna;
 }
 
   .gridContainer > div {
-    background-color: sienna;
     text-align: center;
     padding-bottom: 0;
   }
@@ -256,10 +256,10 @@ li.links a {
   }
 
   .bearLogo:hover {
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -o-transform: scale(1.05);
+    transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -o-transform: scale(1.02);
     transition-duration: 200ms;
     -webkit-transition-duration: 200ms;
     -moz-transition-duration: 200ms;
